fix: 🐛 overflowed page-actions

--- a/resources/skins.citizen.styles/Pagetools.less
+++ b/resources/skins.citizen.styles/Pagetools.less
@@ -1,6 +1,8 @@
 .page-actions {
 	position: relative;
 	display: flex;
+	flex-wrap: wrap;
+	justify-content: flex-end;
 	margin-left: -0.75rem; // Align to the margin
 	font-size: 0.875rem;
 	font-weight: var( --font-weight-medium );
